--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.name=employee-datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/web_customer_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+server.servlet.context-path=/employee-api
